@@ -1,5 +1,7 @@
 Release 4.13
-	- added spreadsheet-style formulas calculated from a row's contents
+	- added spreadsheet-style formulas calculated from a row's
+	  contents
+	- update add-column filter to support formula substitutions
 	- improve error reporting for private HDX resources
 
 2018-12-03 Release 4.12
